fix for bug #158059.  if we go to send a message, and the connection gets closed on us and we haven't read any bytes, that's an error, and we should let the user know. (otherwise they think they are sending mail, when they aren't.)

r=cavin, sr=bienvenu.